Fix link color when dark mode is off

--- a/css/custom.css
+++ b/css/custom.css
@@ -270,7 +270,7 @@ select.filter {
   --text-color: #262626;
   --card-bg-color: #f0f0f0;
   --card-border-color: #e5e5e5;
-  --link-color: #425469;
+  --link-color: #007bff;
   --navbar-bg: #F9E79F;
   --footer-color: #777;
   --footer-border: #e5e5e5;
